# gdpm

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  LICENSE.md  PKGBUILD  README.md  SConstruct  meson.build
.github/workflows/: build.yml
.trunk/: actions  notifications  trunk.yaml
ci/: travis.yml
ci/github/workflows/: build.yml
docs/doxygen/: Doxyfile
examples/http/: README.md  main.cpp
examples/rest_api/: README.md  main.cpp
include/: argparse  cache.hpp  clipp.h  colors.hpp  concepts.hpp  config.hpp  constants.hpp  error.hpp  http.hpp  log.hpp  package.hpp  package_manager.hpp  plugin.hpp  progress_bar.hpp  remote.hpp  rest_api.hpp  result.hpp  types.hpp  utils.hpp  version.hpp
src/: cache.cpp  config.cpp  http.cpp  main.cpp  package.cpp  package_manager.cpp  remote.cpp  rest_api.cpp  utils.cpp  version.cpp
tests/: basic.cpp  plugin.cpp
